--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <div class="input_group">
                 <input class="modal_input submit_button" type="submit" value="Đăng ký">
             </div>
-            <p id="signIn-switch">Bạn đã có tài khoản?
-                <a href="#">Đăng nhập</a></p>
+            <p class="switch-check">Bạn đã có tài khoản?
+                <a id="signIn-switch" href="#">Đăng nhập</a></p>
         </div>
         <!--SignIn Form-->
         <div class="modal_signIn hide">
@@ -68,8 +68,8 @@
             <div class="input_group">
                 <input class="modal_input submit_button" type="submit" value="Đăng nhập">
             </div>                                      
-            <p id="signIn-switch">Bạn chưa có tài khoản?
-                <a href="#">Đăng ký</a></p>
+            <p class="switch-check">Bạn chưa có tài khoản?
+                <a id="signUp-switch" href="#">Đăng ký</a></p>
         </div>
     </div>
     <script type="text/javascript" src="./assets/script.js"></script>
